fix(editor): Fix MFA setup modal in dark mode

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -194,6 +194,10 @@
 	// Node error
 	--color-node-error-output-text-color: var(--prim-color-alt-c-tint-150);
 
+	// MFA Recovery codes
+	--color-mfa-recovery-code-background: var(--color-background-xlight);
+	--color-mfa-recovery-code-color: var(--color-text-dark);
+
 	// Various
 	--color-info-tint-1: var(--prim-gray-420);
 	--color-info-tint-2: var(--prim-gray-740);
